# contractor

./: README.md
.configure/: infra.ps1
infra/: main.bicep
infra/modules/: aca.bicep  acr.bicep  aoai.bicep  bing.bicep  blob.bicep  cosmos.bicep  document.bicep  loga.bicep  speech.bicep  staticwapp.bicep  vision.bicep  vnet.bicep
notebooks/: compliance_test.py  load.ipynb  run_test.py  use.ipynb
notebooks/data/: readme.md
notebooks/data/conversation/: customer_alex_smith_conversations.json  customer_bianca_rodriguez_conversations.json  customer_carlos_lee_conversations.json
notebooks/data/profile/: customer_alex_smith.txt  customer_bianca_rodriguez.txt  customer_carlos_lee.txt
notebooks/templates/: select_template.jinja
src/: .env.sample  README.md  pyproject.toml
src/app/: cosmos_crud.py  main.py
src/app/agents/: __init__.py  main.py  operators.py
src/app/agents/prompts/: ask.jinja  audio.jinja  image.jinja  instruction.jinja  load.jinja  reason.jinja  save.jinja  text.jinja  video.jinja
src/app/plugins/: __init__.py  audio.py  compliance.py  image.py  retrieval.py  search.py  statistical.py  text.py  video.py
src/app/schemas/: __init__.py  compliance.py  models.py
